<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name" />

    <EditText
        android:id="@+id/lightGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lights to include in Group" />

    <ListView
        android:id="@+id/checkedTextLights"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:text="CheckedTextView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btnAddingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group" />

        <Button
        android:id="@+id/btnDeleteGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
            android:visibility="gone"/>

    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
