<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.trevor.ultimatehue.TriggerActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTrigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>


                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/trigger_action_arrays"
                        android:prompt="@string/trigger_prompt" />

                    <TextView
                        android:id="@+id/txtColorChooser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Update to color "
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnChooseColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="chooseColor"
                        android:textSize="18dp"
                        android:text="@string/choose_color" />

                        <CheckBox
                            android:id="@+id/chkPlayWithSound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Play with sound"
                            android:checked="true"/>
                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/txtTriggerLightList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trigger_light_list"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <ListView
                android:id="@+id/checkedTextLights"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:checkMark="?android:attr/listChoiceIndicatorSingle"
                android:text="CheckedTextView" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submit"
                android:text="Submit" />
        </LinearLayout>
    </ScrollView>
    <!--<android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_trigger" />
-->
    <!-- <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>
